--- a/views/edit-contact.ejs
+++ b/views/edit-contact.ejs
@@ -3,34 +3,43 @@
 		<div class="col-md-6">
 			<h2>Form Ubah data Contact</h2>
 
-			<% if (typeof errors !== "undefined") { %>
-			<div class="alert alert-danger" role="alert">
-				<ul>
-					<% errors.forEach(error => { %>
-					<li><%= error.msg %></li>
-					<% }) %>
-				</ul>
-			</div>
-
-			<% } %>
-			<form method="post" action="/contact/?_method=PUT">
-				<input type="hidden" name="_id" value="<%=contact._id%>" />
-				<input type="hidden" name="oldNama" value="<%=contact.oldNama || contact.nama %>" />
-				<div class="mb-3">
-					<label for="nama" class="form-label">Nama</label>
-					<input type="text" class="form-control" id="nama" name="nama" required value="<%=contact.nama%>" />
-				</div>
-				<div class="mb-3">
-					<label for="Email" class="form-label">Email</label>
-					<input type="email" class="form-control" id="Email" name="email" required value="<%=contact.email%>" />
-				</div>
-				<div class="mb-3">
-					<label for="nohp" class="form-label">No Hp</label>
-					<input type="text" class="form-control" id="nohp" name="nohp" required value="<%=contact.nohp%>" />
+			<% if (typeof errors !=="undefined" ) { %>
+				<div class="alert alert-danger" role="alert">
+					<ul>
+						<% errors.forEach(error=> { %>
+							<li>
+								<%= error.msg %>
+							</li>
+							<% }) %>
+					</ul>
 				</div>
 
-				<button type="submit" class="btn btn-primary">Ubah Data Contact</button>
-			</form>
+				<% } %>
+					<form method="post" action="/contact/?_method=PUT" enctype="multipart/form-data">
+						<input type="hidden" name="_id" value="<%=contact._id%>" />
+						<input type="hidden" name="oldNama" value="<%=contact.oldNama || contact.nama %>" />
+						<div class="mb-2">
+							<label for="nama" class="form-label">Nama</label>
+							<input type="text" class="form-control" id="nama" name="nama" required value="<%=contact.nama%>" />
+						</div>
+						<div class="mb-2">
+							<label for="Email" class="form-label">Email</label>
+							<input type="email" class="form-control" id="Email" name="email" required value="<%=contact.email%>" />
+						</div>
+						<div class="mb-2">
+							<label for="nohp" class="form-label">No Hp</label>
+							<input type="text" class="form-control" id="nohp" name="nohp" required value="<%=contact.nohp%>" />
+						</div>
+						<div class="mb-3">
+							<label for="image" class="form-label">Update Image</label>
+							<input class="form-control w-50" type="file" name="image" placeholder="why">
+							<img class="images-up w-25 p-3"
+								src="data:/<%=contact.img.contentType%>;base64,<%=contact.img.data.toString('base64')%>">
+						</div>
+						<button type="submit" class="btn btn-primary mb-5">Ubah
+							Data
+							Contact</button>
+					</form>
 		</div>
 	</div>
 </div>
