--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col text-center">
-			<img src="img/1.jpg" alt="Indra" class="img-thumbnail rounded-circle" width="200" />
+			<image src="image/1.jpg" alt="Indra" class="image-thumbnail rounded-circle" width="200" />
 			<h1 class="display-4">Indra Tristia</h1>
 			<p class="lead">Job Seekers | Front End Web</p>
 		</div>
