--- a/views/add-contact.ejs
+++ b/views/add-contact.ejs
@@ -30,7 +30,7 @@
 						</div>
 						<div class="mb-3">
 							<label for="image" class="form-label">Add Image</label>
-							<input class="form-control" type="file" id="image" name="image" required value="">
+							<input class="form-control add-image" type="file" id="image" name="image" required accept="image/*">
 						</div>
 
 						<button type="submit" class="btn btn-primary">Tambah Data Contact</button>
