--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -10,7 +10,6 @@
 				</div>
 				<% } else {%>
 					<div class="card" style="width: 100px">
-						<img src="data:/<%=contact.img.contentType%>;base64,<%=contact.img.data.toString('base64')%>"
 							class="card-img-top" alt="...">
 						<div class="card-body">
 							<h5 class="card-title">
@@ -43,8 +42,7 @@
 					<div class="card mb-3" style="max-width: 540px;">
 						<div class="row g-0">
 							<div class="col-md-4">
-								<img src="data:/<%=contact.img.contentType%>;base64,<%=contact.img.data.toString('base64')%>"
-									class="img-fluid rounded-start" alt="...">
+								<img src="/uploads/image/<%=contact.image%>" class="img-fluid rounded-start" alt="...">
 							</div>
 							<div class="col-md-8 position-relative">
 								<div class="card-body">
